--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-# Taus-dungeon.github.io
+<a href="Tau's dungeon v1.zip" download>
+  <img src="title_icon.png" alt="Download Tau's Dungeon", align=left>
+  <p>Download game</p>
+</a>
