--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a href="Tau's dungeon v1.zip" download>
+<a href="Tau's_installer_V0.1.EXE" download>
   <img src="title_icon.png" alt="Download Tau's Dungeon", align=left>
   <p>Download game</p>
 </a>
